--- a/style.css
+++ b/style.css
@@ -20,16 +20,6 @@ body {
   font-family: 'Quicksand', sans-serif;
 }
 
-.body-bg {
-  background-color: rgba(30, 55, 53, 0.7);
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: 6;
-}
-
 .phone {
   position: relative;
   width: 320px;
@@ -40,23 +30,48 @@ body {
           box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin: 0 2%;
   overflow: hidden;
+  border: 3px solid #2c3e50;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .phone .phone-wrapper {
   width: 100%;
   height: 100%;
+  background-color: #2c3e50;
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(100%, #2c3e50), to(#2c3e50));
+  background-image: linear-gradient(0deg, #2c3e50 100%, #2c3e50 100%);
+}
+
+.phone .phone-wrapper #openLibraryBtn {
+  cursor: pointer;
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  background-color: transparent;
+  border: none;
+}
+
+.phone .phone-wrapper #openLibraryBtn svg {
+  fill: #fff;
+  width: 35px;
+  height: 35px;
 }
 
 .phone .phone-wrapper .music-bg {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 250px;
   border-radius: 15px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
 }
 
 .phone .phone-wrapper .song-body {
   position: relative;
-  top: 50%;
+  top: 100px;
   color: #fff;
   text-align: center;
   z-index: 5;
@@ -73,10 +88,18 @@ body {
   width: 100%;
 }
 
+.phone .phone-wrapper .song-body .song-img {
+  width: 120px;
+  height: 120px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+}
+
 .phone .phone-wrapper .song-body .song-title {
-  font-size: 18px;
+  font-size: 16px;
   text-shadow: 2px 2px #000;
-  background-color: rgba(30, 55, 53, 0.5);
   padding: 5px 10px;
   border-radius: 8px;
 }
@@ -88,14 +111,15 @@ body {
 .phone .phone-wrapper .song-body .song-title .song-name {
   margin-top: 8px;
   font-weight: 500;
+  font-size: 14px;
 }
 
 .phone .phone-wrapper .song-body .time {
   margin-top: 10px;
   text-shadow: 2px 2px #000;
-  background-color: rgba(30, 55, 53, 0.5);
   border-radius: 8px;
   padding: 5px 10px;
+  font-size: 14px;
 }
 
 .phone .phone-wrapper .song-body .song-duration {
@@ -103,7 +127,7 @@ body {
   height: 5px;
   width: 90%;
   max-width: 350px;
-  background: #1abc9c;
+  background: #b2b2b2;
   border-radius: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -138,44 +162,117 @@ body {
   font-size: 14px;
 }
 
-.modal {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+.phone .phone-wrapper .libraries {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
-  max-width: 300px;
-  padding: 1.5rem;
-  background-color: #fff;
-  z-index: 7;
-  border-radius: 8px;
+  height: 100%;
+  background-color: #2c3e50;
+  z-index: 5;
+  display: none;
 }
 
-.modal-header {
-  border-bottom: 1px solid #000;
-  font-size: 1.5rem;
-  padding-bottom: 5px;
+.phone .phone-wrapper .libraries.active {
+  display: block;
 }
 
-.modal-body {
-  font-size: 15px;
-  width: 100%;
-  padding: 10px 0;
-}
-
-.modal-body h6 {
-  font-size: 1rem;
-  margin-top: 5px;
-}
-
-.modal-footer button {
-  background-color: #1abc9c;
-  color: #fff;
+.phone .phone-wrapper .libraries #closeLibraryBtn {
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  background-color: transparent;
   border: none;
-  padding: 8px 20px;
-  border-radius: 8px;
-  font-size: 15px;
   cursor: pointer;
+}
+
+.phone .phone-wrapper .libraries #closeLibraryBtn svg {
+  fill: #fff;
+  width: 25px;
+  height: 25px;
+}
+
+.phone .phone-wrapper .libraries .music-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 5rem;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  cursor: pointer;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item:hover #libraryPlay {
+  background-color: #394d62;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item-left .music-item-img {
+  width: 50px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item-center {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin-left: 1rem;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item-center .music-item-name {
+  color: #fff;
+  font-size: 16px;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item-center .music-item-artist {
+  color: #fff;
+  font-size: 14px;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item-right {
+  margin-left: 1rem;
+}
+
+.phone .phone-wrapper .libraries .music-list .music-item-right #libraryPlay {
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
