--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ body {
   border:3px solid #2c3e50;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  transform: scale(0.8);
   .phone-wrapper {
     width: 100%;
     height: 100%;
